# pykeyboard

./: .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  EDGE_CASES.md  LICENSE  README.md  examples.py  index.html  mkdocs.yml  mypy.ini  pyproject.toml  shell.nix  showcase_bot.py  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy.yml
0.3/: 404.html  index.html  sitemap.xml
0.3/api/builder/: index.html
0.3/api/buttons/: index.html
0.3/api/errors/: index.html
0.3/api/hooks/: index.html
0.3/api/inline-keyboard/: index.html
0.3/api/reply-keyboard/: index.html
0.3/api/utilities/: index.html
0.3/contributing/: index.html
0.3/errors/: index.html
0.3/examples/basic-bot/: index.html
0.3/examples/ecommerce/: index.html
0.3/examples/menu-system/: index.html
0.3/examples/multilingual/: index.html
0.3/examples/showcase-bot/: index.html
0.3/inline-keyboards/: index.html
0.3/installation/: index.html
0.3/quickstart/: index.html
0.3/reply-keyboards/: index.html
0.3/search/: search_index.json
api/builder/: index.html
api/buttons/: index.html
api/inline-keyboard/: index.html
api/reply-keyboard/: index.html
api/utilities/: index.html
contributing/: index.html
docs/: contributing.md  errors.md  index.md  inline-keyboards.md  installation.md  quickstart.md  reply-keyboards.md
docs/api/: builder.md  buttons.md  errors.md  hooks.md  inline-keyboard.md  reply-keyboard.md  utilities.md
docs/examples/: basic-bot.md  ecommerce.md  menu-system.md  multilingual.md  showcase-bot.md
docs/stylesheets/: extra.css
examples/basic-bot/: index.html
examples/ecommerce/: index.html
examples/menu-system/: index.html
examples/multilingual/: index.html
inline-keyboards/: index.html
installation/: index.html
pykeyboard/: __init__.py  builder.py  errors.py  hooks.py  inline_keyboard.py  inline_pagination_keyboard.py  keyboard_base.py  performance.py  reply_keyboard.py  utils.py  visualization.py
quickstart/: index.html
reply-keyboards/: index.html
search/: search_index.json
tests/: conftest.py  test_builder.py  test_buttons.py  test_errors.py  test_hooks.py  test_inline_keyboard.py  test_keyboard_base.py  test_pagination_prevention.py  test_performance.py  test_reply_keyboard.py  test_utils.py  test_visualization.py
